---
source: crates/tapir-script/compiler/src/compile/optimisations/unused_function_visitor.rs
expression: pretty_printed
input_file: crates/tapir-script/compiler/src/compile/optimisations/snapshot_tests/unused_function/arguments_counts_as_using.tapir
---
# @toplevel: {"FunctionId(0)"}

# {"FunctionId(1)"}
used(
        used2() # {"FunctionId(2)"}
        ,);

# {"FunctionId(1)"}
fn used(int,) {
    wait;
}

# {"FunctionId(2)"}
fn used2() -> (int,) {
    return (33,);
}
